--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script: mvn clean verify
 
 deploy:
    provider: cloudfoundry
-   username: jgsistem
+   username: jgsistem@gmail.com
    password: .Tr3vol17
    api: https://api.run.pivotal.io
    organization: JG17
