--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>banking</groupId>
-	<artifactId>clean-architecture</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>banking</artifactId>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>banking-api-clean-architecture</name>
