--- a/manifiest.yml
+++ b/manifiest.yml
@@ -1,8 +1,7 @@
 ---
 applications:
-- name: my-JGapplication17Banking
-  path: /home/travis/build/jgsistem/BankingApiClean/target/banking-0.1.jar
-                                                         
+- name: banking-des
+  path: /home/travis/build/jgsistem/BankingApiClean/target/banking-0.1.jar                                                         
   memory: 1024M
   instances: 1
   random-route: true
