--- a/manifiest.yml
+++ b/manifiest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
-- name: banking-des
-  path: /home/travis/build/jgsistem/BankingApiClean/target/banking-0.1.jar                                                         
+- name: my-JG17application
+  path: /home/travis/build/jgsistem/BankingApiClean/target/banking-0.1.jar
   memory: 1024M
   instances: 1
   random-route: true  
